<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/scan_file"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:text="@string/scan_file"
        android:textSize="@dimen/lrc"
        android:gravity="center|start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />
    <LinearLayout
        android:id="@+id/randomplay"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_below="@id/scan_file"
        >
        <TextView
            android:id="@+id/random_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="@string/random_play"
            android:textSize="@dimen/lrc"
            android:gravity="center|start"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="4"
            />
        <CheckBox
            android:id="@+id/is_random"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/shutdown"
        android:layout_below="@id/randomplay"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:text="@string/shutdown"
        android:textSize="@dimen/lrc"
        android:gravity="center|start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/attention_app"
        android:layout_below="@id/shutdown"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:text="@string/attention"
        android:textSize="@dimen/lrc"
        android:gravity="center|start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/about_app"
        android:layout_below="@id/attention_app"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:text="@string/about"
        android:textSize="@dimen/lrc"
        android:gravity="center|start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:id="@+id/exit_app"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/about_app"
        android:clickable="true"
        android:text="@string/exit"
        android:textSize="@dimen/lrc"
        android:gravity="center|start"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        />
</RelativeLayout>
