<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/shutdown_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="4dp"
        android:minHeight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:progressDrawable="@drawable/seekbar_pro"
        android:thumb="@drawable/seekbar_thumb"
        />
    <LinearLayout
        android:id="@+id/shutdown_txts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shutdown_seekbar"
        android:orientation="horizontal"
        android:weightSum="8"
        >
        <TextView
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/lrc"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/min"
            android:textSize="@dimen/lrc"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:text="@string/clear"
            android:layout_weight="4"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shutdown_txts"
        >
        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:text="@string/confirm"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/none"
            android:text="@string/cancel"
            android:layout_weight="1"
            />


    </LinearLayout>

</RelativeLayout>