<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="64dp"
    >
    <TextView
        android:id="@+id/songname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/songname"
        android:textSize="18sp"
        android:textColor="@color/noneblack"
        />
    <TextView
        android:id="@+id/singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_below="@id/songname"
        android:layout_marginTop="2dp"
        android:text="@string/singer"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_below="@id/singer"
        android:layout_marginEnd="16dp"
        android:text="@string/time"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/HQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HQ"
        android:textSize="16sp"
        android:layout_below="@+id/singer"
        android:layout_toEndOf="@+id/time"/>
    <ImageView
        android:id="@+id/on_play_icon"
        android:layout_width="30dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>