<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About.About">
    <RelativeLayout
        android:id="@+id/about_titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:id="@+id/back"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/back"
            android:scaleType="fitXY"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/none"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_centerInParent="true"
            android:textSize="27sp"
            android:textColor="@color/title"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_titlebar"
        android:layout_marginTop="24dp"
        android:text="@string/about_detail"
        android:textSize="@dimen/text_margin"
        android:gravity="start"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:text="@string/about_author"
        android:textSize="@dimen/lrc"
        android:layout_marginEnd="@dimen/lrc"
        android:gravity="end"
        />
</RelativeLayout>
